# onta-oss

./: ARCHITECTURE.md  CLA.md  CONTRIBUTING.md  NOTICE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: cla.yml  test.yml
cograph_client/: config.py
cograph_client/agent/: __init__.py  conversation_store.py  plan_store.py  planner.py  registry.py
cograph_client/api/: app.py  deps.py
cograph_client/auth/: api_keys.py  tenant_directory.py
cograph_client/db/: __init__.py  pool.py
scripts/: local_sparql.py
tests/: fake_enrichment_plugin.py  fake_router_plugin.py  test_agent.py  test_agent_conversation.py  test_agent_ontology.py  test_agent_urls.py  test_attribute_aliases.py  test_auth_multi_tenant.py  test_chunker.py  test_csv_resolver.py  test_db_pool.py  test_drift_control.py  test_drift_integration.py  test_enrichment.py  test_explore_attr_filter.py  test_explore_records.py  test_explore_type_edges.py  test_extraction.py  test_function_execution_modes.py  test_governance.py  test_jobs_actions.py  test_kg_dashboard_stats.py  test_kg_list_counts.py  test_kg_registration.py  test_kg_stats_invalidation.py  test_kg_writer.py  test_layer_aware_closure.py  test_llm_extractor.py  test_mcp_agent_route.py  test_mcp_tools_contract.py  test_multityping_gaps.py  test_multityping_healthcare.py  test_multityping_hospitality.py  test_multityping_real_estate.py  test_multityping_retail.py  test_multityping_saas.py  test_normalization.py  test_ontology_embeddings.py  test_ontology_layers.py  test_ontology_queries.py  (+44 more)
(+108 files in other folders)
