[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cograph-client"
version = "0.1.0"
description = "Living Knowledge Graph Platform"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "rapidfuzz>=3.10.0",
    "anthropic>=0.85.0",
    "boto3>=1.35.0",
    "structlog>=24.4.0",
    "slowapi>=0.1.9",
    "numpy>=1.26.0",
    "asyncpg>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end tests requiring a live server + LLM API key (not run in CI)",
]
